# ement-e2ee

./: Cargo.toml  README.md  config.example.toml
contrib/: ement-e2ee.service
src/: config.rs  error.rs  main.rs  session.rs  upstream.rs
src/admin/: ctl.rs  mod.rs
src/crypto/: backup.rs  decrypt.rs  encrypt.rs  machine.rs  media.rs  mod.rs  rooms.rs  ssss.rs  sync.rs  verify.rs
src/proxy/: intercept.rs  login.rs  mod.rs  passthrough.rs  routes.rs
